# astraea

./: .gitignore  README.md  cycle_client.py  cycle_client_nocomm.py  cycle_server.py  cycle_server_nocomm.py  new_run_client.py  new_run_experiment.py  new_run_server.py  run_client.py  run_experiment.py  run_server.py
kernel/deb/: README.md
kernel/patch/: linux-5-4.patch
kernel/tcp-astraea/: Makefile  README.md  rtcp_astraea.c  tcp_astraea.c  tcp_astraea_bypass.c
models/exported/: model.data-00000-of-00001  model.index
models/py/: checkpoint
models/py-model2/: checkpoint  model-297.data-00000-of-00001  model-297.index  model-393.data-00000-of-00001  model-393.index
python/: astraea.json  context.py  export_tf_model.py  infer.py
python/agent/: agent.py  definitions.py
python/helpers/: context.py  generate_trace.py  utils.py
scripts/: install_deps.sh  install_tensorflow_cc.sh
src/: CMakeLists.txt  Makefile  client_eval.cc  client_eval_batch.cc  client_eval_batch_udp.cc  client_receiver.cc  command.txt  new_client_receiver.cc  new_client_receiver_nocomm.cc  new_server_sender.cc  new_server_sender_nocomm.cc  passive_client.cc  server.cc  server_sender.cc
src/inference/: CMakeLists.txt  context.cc  context.hh  define.cc  define.hh  infer.cc  server.hh  tf_inference.cc  tf_inference.hh  udp_server.cc  udp_server.hh  unix_socket_server.cc  unix_socket_server.hh
src/net/: CMakeLists.txt  Makefile  deepcc_socket.cc  filesystem.hh  tcp_info.hh
